added map display action

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
- <h1>Select Launchfile</h1>
+ <h1>Trigger action on device</h1>
     <form action="/trigger_execution" method="post">
-        <label for="launchfile_id">Select a launchfile:</label><br>
+        <label for="launchfile_id">Select action:</label><br>
         <input type="radio" id="bringup" name="launchfile_id" value="bringup">
         <label for="bringup">Bringup</label><br>
         <input type="radio" id="startmapping" name="launchfile_id" value="startmapping">
@@ -22,15 +22,23 @@
         <p>Execution Status: {{ execution_status }}</p>
     {% endif %}
     <hr>
-    
-    <form action="/current_values" method="get">
-        <button type="submit">Current Values</button>
-    </form>
-    {% if current_status %}
-        <p>Current Values: {{ current_status }}</p>
-    {% endif %}
+
+    <h1>Link to Foxglove Dashboard</h1>
+    <a href="https://foxglove-demo.robopaas.dev/?ds=foxglove-websocket&ds.url=wss%3A%2F%2Fbridges.robopaas.dev">Foxglove dashboard</a>
     <hr>
     
+
+    <h1>Environment map</h1>
+    <img src="{{ image_url }}" alt="my_map.pgm">
+
+
+    <form action="/map_export" method="get">
+        <button type="submit">Export Map</button>
+    </form>
+    <hr>
+
+       
+    <h1>Read properties on device</h1>
     <form action="/read_data" method="get">
         <button type="submit">Read Data</button>
     </form>
@@ -38,6 +46,16 @@
         <h2>Data</h2>
         <pre>{{ data }}</pre>
     {% endif %}
+
+    <h1>Read properties on device through periodic function</h1>
+    <form action="/current_values" method="get">
+        <button type="submit">Current Values</button>
+    </form>
+    {% if current_status %}
+        <p>Current Values: {{ current_status }}</p>
+    {% endif %}
+    <hr>
+ 
 </body>
 </html>
 
